add prices
